使用Lealone的启动脚本和配置文件