@@ -14,8 +14,9 @@
 #  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 #  See the License for the specific language governing permissions and
 #  limitations under the License.
-if [ "x$BATS_HOME" = "x" ]; then
-    BATS_HOME="`dirname "$0"`/.."
+
+if [ "x$LEALONE_HOME" = "x" ]; then
+    LEALONE_HOME="`dirname "$0"`/.."
 fi
 
 if [ "x$JAVA_HOME" = "x" ]; then
@@ -23,25 +24,18 @@ if [ "x$JAVA_HOME" = "x" ]; then
     exit 1;
 fi
 
-BATS_MAIN=org.lealone.bats.engine.BatsEngine
-
-# JAVA_OPTS=-ea
-# JAVA_OPTS="$JAVA_OPTS -Xms10M"
-# JAVA_OPTS="$JAVA_OPTS -Xmx1G"
-# JAVA_OPTS="$JAVA_OPTS -XX:+HeapDumpOnOutOfMemoryError"
-# JAVA_OPTS="$JAVA_OPTS -XX:+UseParNewGC"
-# JAVA_OPTS="$JAVA_OPTS -XX:+UseConcMarkSweepGC"
-# JAVA_OPTS="$JAVA_OPTS -XX:+CMSParallelRemarkEnabled"
-# JAVA_OPTS="$JAVA_OPTS -XX:SurvivorRatio=8"
-# JAVA_OPTS="$JAVA_OPTS -XX:MaxTenuringThreshold=1"
-# JAVA_OPTS="$JAVA_OPTS -XX:CMSInitiatingOccupancyFraction=75"
-# JAVA_OPTS="$JAVA_OPTS -XX:+UseCMSInitiatingOccupancyOnly"
+LEALONE_MAIN=org.lealone.main.Shell
 
 JAVA_OPTS=-Xms10M
-JAVA_OPTS="$JAVA_OPTS -Dlogback.configurationFile=logback.xml"
-JAVA_OPTS="$JAVA_OPTS -Dbats.logdir=$BATS_HOME/logs"
-# JAVA_OPTS="$JAVA_OPTS -agentlib:jdwp=transport=dt_socket,address=8000,server=y,suspend=y"
+JAVA_OPTS="$JAVA_OPTS -Dlealone.logdir=$LEALONE_HOME/logs"
 
-CLASSPATH=$BATS_HOME/conf:%BATS_HOME%/lib/*
+CLASSPATH=$LEALONE_HOME/conf:$LEALONE_HOME/lib/*
 
-"$JAVA_HOME/bin/java" $JAVA_OPTS -cp $CLASSPATH $BATS_MAIN
+if [ "x$1" = "x" ]; then
+    LEALONE_PARAMS="$1"
+fi
+if [ "x$2" = "x" ]; then
+    LEALONE_PARAMS="$LEALONE_PARAMS $2"
+fi
+
+"$JAVA_HOME/bin/java" $JAVA_OPTS -cp $CLASSPATH $LEALONE_MAIN $LEALONE_PARAMS
